--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "asar": "^0.11.0",
     "chai": "^3.5.0",
     "electron-packager": "^7.0.3",
-    "electron-prebuilt": "^0.36.0",
+    "electron-prebuilt": "1.0.0",
     "grunt": "^1.0.0",
     "jquery": "^3.1.0",
     "jsdom": "^9.4.1",
