#31: Initial switch from nedb to Sequelize
* Changed AboutCodeDB to use Sequelize instead of nedb
* Removed nedb dependencies
* Added sequelize, sequelize-cli, sqlite3, and electron-rebuild dependences.
* Updated shrinkwrap file.
* TODO: still need to re-add searching and sorting to the Sequelize DB.

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "open source scanner"
   ],
   "author": "nexB",
-  "license": "apache-2.0",
+  "license": "Apache-2.0",
   "bugs": {
     "url": ""
   },
@@ -29,6 +29,7 @@
     "chai": "^3.5.0",
     "electron-packager": "^7.0.3",
     "electron-prebuilt": "1.4.0",
+    "electron-rebuild": "^1.5.7",
     "grunt": "^1.0.0",
     "jquery": "^3.1.0",
     "jsdom": "^9.4.1",
@@ -37,6 +38,8 @@
     "sinon": "^1.17.4"
   },
   "dependencies": {
-    "nedb": "^1.8.0"
+    "sequelize": "^3.30.2",
+    "sequelize-cli": "^2.5.1",
+    "sqlite3": "^3.1.8"
   }
 }
