Added bintray to .travis.yml #16
Signed-off-by: Jillian Daguil <jdaguil@nexb.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,10 @@ node_js:
   - "6"
 
 script: ./build.sh linux
+
+deploy:
+  provider: bintray
+  file: .travis_bintray.json
+  user: pombreda
+  key:
+    secure: l8uNfriu2L+rHRRBsR8R6pGHFt+r1Rymfk+1pOKdJTR8NjgBAYEAxPU6IPr+drH1WheXGVFoWttWTcplvo8Xmc+skUMXKUnjNCgrRE0rYKqjdHmEBMKUAjAfZ3hq48ayjRm3FvAjPwcWbTD0siBjK1qm4SD7TBEEC28XuJhT1oE=
