--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,14 @@
 language: node_js
+sudo: required
 node_js:
   - "6"
+
+env:
+  - CXX=g++-4.8
+
+before_install:
+  - sudo apt-get update
+  - sudo apt-get install build-essential -y
 
 script: ./build.sh linux
 
