--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "asar": "^0.11.0",
     "chai": "^3.5.0",
     "chai-subset": "^1.5.0",
+    "electron": "1.4.0",
     "electron-packager": "^7.0.3",
-    "electron-prebuilt": "1.4.0",
     "electron-rebuild": "^1.5.7",
     "grunt": "^1.0.0",
     "jquery": "^3.1.0",
