--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,10 @@ node_js:
 env:
   - CXX=g++-4.8
 
+os:
+  - linux
+  - osx
+
 before_install:
   - sudo apt-get update
   - sudo apt-get install build-essential -y
