--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,6 @@ os:
   - osx
 
 before_install:
-  - sudo apt-get update
-  - sudo apt-get install build-essential -y
+  - if [ $TRAVIS_OS_NAME = linux ]; then sudo apt-get update; sudo apt-get install build-essential -y; fi
 
 script: python build.py
