More attempt to use Appevyor Artifact #16
Signed-off-by: Philippe Ombredanne <pombredanne@nexb.com>

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -17,6 +17,6 @@ install:
 build_script:
   - npm install
   - python build.py
-  - appveyor PushArtifact dist\*.zip
+  - appveyor PushArtifact 'dist\*.zip'
 
 test: off
