--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,13 @@
 language: node_js
 sudo: required
-
-osx_image: xcode8.3
 dist: precise
 
 node_js:
   - "6"
 
-
-#env:
-#  - CXX=gcc-4.8
-#  - CC=gcc-4.8
+env:
+  global:
+    - CC=clang CXX=clang++ npm_config_clang=1
 
 os:
   - linux
