--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "sinon": "^1.17.4"
   },
   "dependencies": {
+    "JSONStream": "^1.3.1",
     "sequelize": "^3.30.2",
     "sequelize-cli": "^2.5.1",
     "sqlite3": "3.1.10"
