--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,11 @@ env:
   global:
     - CC=clang CXX=clang++ npm_config_clang=1
 
-os:
-  - linux
-  - osx
+matrix:
+    include:
+        - os: osx
+          language: generic
+          osx_image: xcode7.3
 
 
 before_install:
