--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,8 @@ env:
 
 matrix:
     include:
+        - os: linux
+          python: 2.7.13
         - os: osx
           language: generic
           osx_image: xcode7.3
