--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "electron": "1.6.14",
     "electron-packager": "^7.0.3",
     "electron-rebuild": "^1.5.7",
+    "eslint": "^4.16.0",
     "grunt": "^1.0.0",
     "jquery": "^3.1.0",
     "jsdom": "^9.4.1",
