Add test that runs ESLint #168
* ESLint will run over all ABCM JS files and test files when you
  run npm test

Signed-off-by: Jillian Daguil <jdaguil@nexb.com>

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,7 +9,9 @@
         "c3": false,
         "d3": false,
         "ProgressBar": false,
-        "Split": false
+        "Split": false,
+        "describe": false,
+        "it": false
     },
     "extends": "eslint:recommended",
     "parserOptions": {
