Add spacing before blocks and keywords #168
* Add comments and fix spacing.

Signed-off-by: Jillian Daguil <jdaguil@nexb.com>

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -51,6 +51,18 @@
                 ]
             }
         ],
-        "space-infix-ops": ["error", {"int32Hint": false}]
+        "space-infix-ops": [
+            "error",
+            {
+                "int32Hint": false
+            }
+        ],
+        "space-before-blocks": "error",
+        "keyword-spacing": [
+            "error",
+            {
+                "before": true
+            }
+        ]
     }
 }
