Remove padding within blocks #168
* Add ESLint padded-blocks rule

Signed-off-by: Jillian Daguil <jdaguil@nexb.com>

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -63,6 +63,14 @@
             {
                 "before": true
             }
+        ],
+        "one-var": [
+            "error",
+            "never"
+        ],
+        "padded-blocks": [
+            "error",
+            "never"
         ]
     }
 }
