Remove spaces in parentheses #168
* Add ESLint space-in-parens rule

Signed-off-by: Jillian Daguil <jdaguil@nexb.com>

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -71,6 +71,10 @@
         "padded-blocks": [
             "error",
             "never"
+        ],
+        "space-in-parens": [
+            "error",
+            "never"
         ]
     }
 }
