Refactor to use const instead of let #168
* Add prefer const to ESLint rules

Signed-off-by: Jillian Daguil <jdaguil@nexb.com>

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -75,6 +75,7 @@
         "space-in-parens": [
             "error",
             "never"
-        ]
+        ],
+        "prefer-const": "error"
     }
 }
