Refactor to use => instead of function #168
* Add prefer arrow callback to ESLint rules

Signed-off-by: Jillian Daguil <jdaguil@nexb.com>

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -76,6 +76,8 @@
             "error",
             "never"
         ],
-        "prefer-const": "error"
+        "prefer-const": "error",
+        "prefer-arrow-callback": "error",
+        "arrow-spacing": "error"
     }
 }
