Refactor to use parens around all arguments #168
* Add arrow-parens to ESLint rules
* Update to package.json to use exact version of Electron 1.6.16 #225

Signed-off-by: Jillian Daguil <jdaguil@nexb.com>

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -78,6 +78,10 @@
         ],
         "prefer-const": "error",
         "prefer-arrow-callback": "error",
-        "arrow-spacing": "error"
+        "arrow-spacing": "error",
+        "arrow-parens": [
+            "error",
+            "always"
+        ]
     }
 }
