--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   },
   "dependencies": {
     "JSONStream": "^1.3.1",
+    "packageurl-js": "0.0.1",
     "sequelize": "^3.30.2",
     "sequelize-cli": "^2.5.1",
     "sqlite3": "3.1.13"
