--- a/package.json
+++ b/package.json
@@ -40,10 +40,10 @@
     "sinon": "^1.17.4"
   },
   "dependencies": {
-    "JSONStream": "^1.3.1",
+    "JSONStream": "1.3.5",
     "packageurl-js": "0.0.1",
-    "sequelize": "^4.44.3",
-    "sequelize-cli": "^4.1.1",
-    "sqlite3": "^4.0.2"
+    "sequelize": "4.44.3",
+    "sequelize-cli": "5.5.1",
+    "sqlite3": "4.1.0"
   }
 }
