--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "electron-packager": "^14.0.1",
     "electron-rebuild": "^1.8.5",
     "eslint": "^4.16.0",
+    "globby": "^10.0.0",
     "grunt": "^1.0.4",
     "jquery": "^3.4.0",
     "jsdom": "^9.4.1",
