Add source-controlled documentation
* Migrate workbench docs from aboutcode.readthedocs.org
* Add CI doc checks for Travis CI

Addresses: #411

Signed-off-by: Steven Esser <sesser@nexb.com>

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@
 /local
 node_modules/
 bower_components/
+docs/build
 
 # Installer logs
 debug.log
@@ -31,6 +32,7 @@ npm-debug.log
 .*.sw[po]
 .build
 .ve
+.venv
 *.bak
 /.cache/
 
