--- a/.travis.yml
+++ b/.travis.yml
@@ -1,36 +1,55 @@
-language: node_js
-sudo: required
-dist: xenial
-
-node_js:
-  - "10"
-
-env:
-  global:
-    - CC=clang CXX=clang++ npm_config_clang=1
-
 matrix:
-    include:
-        - os: linux
-          python: 2.7.13
-        - os: osx
-          language: generic
-          osx_image: xcode11
+  include:
+    - os: linux
+      dist: xenial
+      sudo: required
+      language: node_js
+      node_js: 10
+      python: 2.7.13
+      env:
+        - CC=clang
+        - CXX=clang++
+        - npm_config_clang=1
+      script:
+        - sudo apt install build-essential -y
+        - npm install
+        - npm test
+        - python build.py
+    
+    - os: macos
+      sudo: required
+      language: generic
+      osx_image: xcode11
+      env:
+        - CC=clang
+        - CXX=clang++
+        - npm_config_clang=1
+      script:
+        - npm install
+        - npm test
+        - python build.py
 
-
-before_install:
-  - if [ $TRAVIS_OS_NAME = linux ]; then sudo apt-get update; sudo apt-get install build-essential -y; fi
-  - node --version
-  - npm --version
-  - openssl version
-  - python --version
-  - ssh -V
-  - pip -V
-
-script:
-  - npm install
-  - npm test
-  - python build.py
+    - os: linux
+      dist: xenial
+      python: 2.7.13
+      sudo: required
+      script:
+        - sudo pip install Sphinx sphinx_rtd_theme doc8
+        - chmod +x ./docs/scripts/sphinx_build_link_check.sh
+        - chmod +x ./docs/scripts/doc8_style_check.sh
+        - "./docs/scripts/sphinx_build_link_check.sh"
+        - "./docs/scripts/doc8_style_check.sh"
+    
+    - os: linux
+      dist: xenial
+      python: 3.6
+      sudo: required
+      script:
+        - sudo pip install Sphinx sphinx_rtd_theme doc8
+        - chmod +x ./docs/scripts/sphinx_build_link_check.sh
+        - chmod +x ./docs/scripts/doc8_style_check.sh
+        - "./docs/scripts/sphinx_build_link_check.sh"
+        - "./docs/scripts/doc8_style_check.sh"
 
 
 addons:
