--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,8 @@ matrix:
     
     - os: macos
       sudo: required
-      language: generic
+      language: node_js
+      node_js: 10
       osx_image: xcode11
       env:
         - CC=clang
