--- a/.travis.yml
+++ b/.travis.yml
@@ -1,25 +1,10 @@
 matrix:
   include:
-    - os: linux
-      dist: xenial
-      sudo: required
-      language: node_js
-      node_js: 16
-      python: 3.10.1
-      env:
-        - CC=clang
-        - CXX=clang++
-        - npm_config_clang=1
-      script:
-        - sudo apt install build-essential -y
-        - npm install
-        - npm test
-        - python build.py
-    
     - os: macos
       sudo: required
       language: node_js
       node_js: 16
+      python: 3.7
       osx_image: xcode11
       env:
         - CC=clang
@@ -31,27 +16,52 @@ matrix:
         - python build.py
 
     - os: linux
-      dist: xenial
-      python: 3.10.1
+      dist: focal
       sudo: required
+      language: node_js
+      node_js: 16
+      python: 3.7
+      env:
+        - CC=clang
+        - CXX=clang++
+        - npm_config_clang=1
       script:
-        - sudo pip install Sphinx sphinx_rtd_theme doc8
-        - chmod +x ./docs/scripts/sphinx_build_link_check.sh
-        - chmod +x ./docs/scripts/doc8_style_check.sh
-        - "./docs/scripts/sphinx_build_link_check.sh"
-        - "./docs/scripts/doc8_style_check.sh"
-    
+        - sudo apt install build-essential -y
+        - npm install
+        - npm test
+        - python build.py
+
+    - os: linux
+      dist: bionic
+      sudo: required
+      language: node_js
+      node_js: 16
+      python: 3.7
+      env:
+        - CC=clang
+        - CXX=clang++
+        - npm_config_clang=1
+      script:
+        - sudo apt install build-essential -y
+        - npm install
+        - npm test
+        - python build.py
+
     - os: linux
       dist: xenial
-      python: 3.10.1
       sudo: required
+      language: node_js
+      node_js: 16
+      python: 3.7
+      env:
+        - CC=clang
+        - CXX=clang++
+        - npm_config_clang=1
       script:
-        - sudo pip install Sphinx sphinx_rtd_theme doc8
-        - chmod +x ./docs/scripts/sphinx_build_link_check.sh
-        - chmod +x ./docs/scripts/doc8_style_check.sh
-        - "./docs/scripts/sphinx_build_link_check.sh"
-        - "./docs/scripts/doc8_style_check.sh"
-
+        - sudo apt install build-essential -y
+        - npm install
+        - npm test
+        - python build.py
 
 addons:
   ssh_known_hosts: web.sourceforge.net
