Added support for latest schema, removed unused libs and code
Signed-off-by: Omkar Phansopkar <omkarphansopkar@gmail.com>

--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "package-asar": "electron-forge package && electron-packager . --overwrite --asar --icon=src/assets/app-icon/icon --prune=true --out=out --ignore=\"(src*|dist*|samples*)\"",
     "note": "^^if we change out dir above, change electron-forge out directory too",
     "package-tar": "mkdir -p dist && tar -czf dist/scancode_workbench.tar.gz -C out .",
+    "publish": "electron-forge package && electron-packager . --overwrite --icon=src/assets/app-icon/icon --prune=true --out=out --ignore=\"(src*|dist*|samples*)\" && npm run package-tar",
     "make": "electron-forge make",
-    "publish": "electron-forge publish",
+    "publish-forge": "electron-forge publish",
     "lint": "eslint --ext .ts,.tsx .",
     "dependencyBuild": "$(npm bin)/electron-rebuild",
     "dependencyBuild-windows": ".\\node_modules\\.bin\\electron-rebuild.cmd",
@@ -55,7 +56,7 @@
     "@types/validator": "^13.7.4",
     "@typescript-eslint/eslint-plugin": "^5.28.0",
     "@typescript-eslint/parser": "^5.28.0",
-    "@vercel/webpack-asset-relocator-loader": "1.7.2",
+    "@vercel/webpack-asset-relocator-loader": "^1.7.2",
     "asar": "^3.1.0",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.1",
@@ -81,31 +82,22 @@
     "@fortawesome/free-regular-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.19",
-    "@inovua/reactdatagrid-community": "^4.19.8",
     "@microlink/react-json-view": "^1.22.2",
-    "@timfish/webpack-asset-relocator-loader": "^0.1.0",
     "ag-grid-community": "^28.0.2",
     "ag-grid-react": "^28.0.0",
     "allotment": "^1.14.2",
-    "aws-sdk": "^2.1178.0",
     "bootstrap": "^5.1.3",
     "c3": "^0.7.20",
-    "chart.js": "^3.8.0",
-    "d3": "^7.4.4",
     "electron-is-dev": "^2.0.0",
     "electron-squirrel-startup": "^1.0.0",
     "file-loader": "^6.2.0",
     "font-awesome": "^4.7.0",
     "jquery": "^3.6.0",
     "JSONStream": "^1.3.5",
-    "mock-aws-s3": "^4.0.2",
     "moment": "^2.29.4",
-    "nock": "^13.2.9",
-    "packageurl-js": "^0.0.6",
     "pg-hstore": "^2.3.4",
     "rc-tree": "^5.6.5",
     "react": "^18.2.0",
-    "react-apexcharts": "^1.4.0",
     "react-bootstrap": "^2.4.0",
     "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
@@ -115,9 +107,10 @@
     "react-toastify": "^9.0.7",
     "sequelize": "^6.21.3",
     "sequelize-cli": "^6.4.1",
-    "sqlite3": "^5.0.9",
-    "startbootstrap-simple-sidebar": "^6.0.5",
-    "url-loader": "^4.1.1"
+    "sqlite3": "^5.0.11",
+    "url": "^0.11.0",
+    "url-loader": "^4.1.1",
+    "util": "^0.12.4"
   },
   "config": {
     "forge": {
