--- a/.github/workflows/RELEASE.yml
+++ b/.github/workflows/RELEASE.yml
@@ -1,5 +1,5 @@
 # name of your github action
-name: Release CD
+name: Release
 
 # this will help you specify when & which branch to run deployment
 on:
