--- a/package.json
+++ b/package.json
@@ -22,94 +22,91 @@
     "start": "ELECTRON_IS_DEV=1 electron-forge start",
     "postinstall": "electron-builder install-app-deps",
     "publish": "electron-forge package && node packager.js && npm run create-archive",
-    "note": "^^if we change out dir above, change electron-forge out directory too",
     "create-archive": "python archive_builder.py",
     "make": "electron-forge make",
     "publish-forge": "electron-forge publish",
     "lint": "eslint --ext .ts,.tsx .",
-    "dependencyBuild": "$(npm bin)/electron-rebuild",
-    "dependencyBuild-windows": ".\\node_modules\\.bin\\electron-rebuild.cmd",
     "test": "echo 'No tests yet :)'",
     "forge-package": "electron-forge package",
     "rebuild-sqlite3": "electron-rebuild -f -w sqlite3",
-    "build": "react-scripts build"
+    "package": "electron-forge package"
   },
   "devDependencies": {
-    "@electron-forge/cli": "^6.0.0-beta.64",
-    "@electron-forge/maker-deb": "^6.0.0-beta.64",
-    "@electron-forge/maker-rpm": "^6.0.0-beta.64",
-    "@electron-forge/maker-squirrel": "^6.0.0-beta.64",
-    "@electron-forge/maker-zip": "^6.0.0-beta.64",
-    "@electron-forge/plugin-auto-unpack-natives": "^6.0.0-beta.64",
-    "@electron-forge/plugin-webpack": "6.0.0-beta.64",
-    "@fortawesome/fontawesome-free": "^6.1.2",
-    "@svgr/webpack": "^6.3.1",
-    "@types/better-sqlite3": "^7.5.0",
+    "@electron-forge/cli": "^6.0.0-beta.66",
+    "@electron-forge/maker-deb": "^6.0.0-beta.66",
+    "@electron-forge/maker-rpm": "^6.0.0-beta.66",
+    "@electron-forge/maker-squirrel": "^6.0.0-beta.66",
+    "@electron-forge/maker-zip": "^6.0.0-beta.66",
+    "@electron-forge/plugin-auto-unpack-natives": "^6.0.0-beta.66",
+    "@electron-forge/plugin-webpack": "6.0.0-beta.66",
+    "@fortawesome/fontawesome-free": "^6.2.0",
+    "@svgr/webpack": "^6.4.0",
+    "@types/better-sqlite3": "^7.6.0",
     "@types/c3": "^0.7.8",
     "@types/d3": "^7.4.0",
     "@types/jquery": "^3.5.14",
     "@types/jsonstream": "^0.8.30",
-    "@types/node": "^18.6.3",
-    "@types/react": "^18.0.14",
-    "@types/react-dom": "^18.0.5",
-    "@types/sequelize": "^4.28.13",
+    "@types/node": "^18.8.0",
+    "@types/react": "^18.0.21",
+    "@types/react-dom": "^18.0.6",
+    "@types/sequelize": "^4.28.14",
     "@types/sqlite3": "^3.1.8",
-    "@types/validator": "^13.7.4",
-    "@typescript-eslint/eslint-plugin": "^5.28.0",
-    "@typescript-eslint/parser": "^5.28.0",
-    "@vercel/webpack-asset-relocator-loader": "^1.7.2",
-    "asar": "^3.1.0",
+    "@types/validator": "^13.7.7",
+    "@typescript-eslint/eslint-plugin": "^5.38.1",
+    "@typescript-eslint/parser": "^5.38.1",
+    "@vercel/webpack-asset-relocator-loader": "^1.7.3",
+    "asar": "^3.2.0",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.1",
-    "electron": "^19.0.4",
+    "electron": "^21.0.1",
     "electron-builder": "^23.3.3",
-    "electron-packager": "^15.5.1",
-    "electron-rebuild": "^3.2.8",
-    "eslint": "^8.18.0",
+    "electron-rebuild": "^3.2.9",
+    "eslint": "^8.24.0",
     "eslint-plugin-import": "^2.26.0",
-    "fork-ts-checker-webpack-plugin": "^7.2.11",
+    "fork-ts-checker-webpack-plugin": "^7.2.13",
     "native-ext-loader": "^2.3.0",
     "node-loader": "^2.0.0",
     "react-scripts": "^5.0.1",
     "style-loader": "^3.3.1",
-    "svg-url-loader": "^7.1.1",
-    "ts-loader": "^9.3.0",
-    "typescript": "~4.7.4"
+    "svg-url-loader": "^8.0.0",
+    "ts-loader": "^9.4.1",
+    "typescript": "~4.8.4"
   },
   "dependencies": {
     "@electron/remote": "^2.0.8",
-    "@fortawesome/fontawesome-svg-core": "^6.1.2",
-    "@fortawesome/free-brands-svg-icons": "^6.1.1",
-    "@fortawesome/free-regular-svg-icons": "^6.1.1",
-    "@fortawesome/free-solid-svg-icons": "^6.1.1",
-    "@fortawesome/react-fontawesome": "^0.1.19",
+    "@fortawesome/fontawesome-svg-core": "^6.2.0",
+    "@fortawesome/free-brands-svg-icons": "^6.2.0",
+    "@fortawesome/free-regular-svg-icons": "^6.2.0",
+    "@fortawesome/free-solid-svg-icons": "^6.2.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@microlink/react-json-view": "^1.22.2",
-    "ag-grid-community": "^28.0.2",
-    "ag-grid-react": "^28.0.0",
-    "allotment": "^1.14.2",
-    "bootstrap": "^5.1.3",
+    "ag-grid-community": "^28.1.1",
+    "ag-grid-react": "^28.1.1",
+    "allotment": "^1.17.0",
+    "bootstrap": "^5.2.1",
     "c3": "^0.7.20",
     "electron-is-dev": "^2.0.0",
+    "electron-packager": "^16.0.0",
     "electron-squirrel-startup": "^1.0.0",
     "file-loader": "^6.2.0",
     "font-awesome": "^4.7.0",
-    "jquery": "^3.6.0",
+    "jquery": "^3.6.1",
     "JSONStream": "^1.3.5",
     "moment": "^2.29.4",
-    "packageurl-js": "^0.0.7",
+    "packageurl-js": "^1.0.0",
     "pg-hstore": "^2.3.4",
-    "rc-tree": "^5.6.5",
+    "rc-tree": "^5.7.0",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.4.0",
+    "react-bootstrap": "^2.5.0",
     "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
-    "react-loader-spinner": "^5.1.7-beta.1",
+    "react-loader-spinner": "^5.3.4",
     "react-pro-sidebar": "^0.7.1",
-    "react-router-dom": "^6.3.0",
-    "react-toastify": "^9.0.7",
-    "sequelize": "^6.21.3",
-    "sequelize-cli": "^6.4.1",
-    "sqlite3": "^5.0.11",
+    "react-router-dom": "^6.4.1",
+    "react-toastify": "^9.0.8",
+    "sequelize": "^6.23.2",
+    "sequelize-cli": "^6.5.1",
+    "sqlite3": "^5.1.2",
     "url": "^0.11.0",
     "url-loader": "^4.1.1",
     "util": "^0.12.4"
@@ -117,13 +114,14 @@
   "config": {
     "forge": {
       "packagerConfig": {
+        "name": "ScanCode Workbench",
         "icon": "src/assets/app-icon/icon"
       },
       "makers": [
         {
           "name": "@electron-forge/maker-squirrel",
           "config": {
-            "name": "scancode-workbench"
+            "name": "ScanCode Workbench"
           }
         },
         {
