--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/node": "^18.8.0",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
+    "@types/react-toastify": "^4.1.0",
     "@types/sequelize": "^4.28.14",
     "@types/sqlite3": "^3.1.8",
     "@types/validator": "^13.7.7",
@@ -59,6 +60,7 @@
     "eslint": "^8.24.0",
     "eslint-plugin-import": "^2.26.0",
     "fork-ts-checker-webpack-plugin": "^7.2.13",
+    "json-loader": "^0.5.7",
     "native-ext-loader": "^2.3.0",
     "node-loader": "^2.0.0",
     "react-scripts": "^5.0.1",
@@ -87,6 +89,7 @@
     "font-awesome": "^4.7.0",
     "jquery": "^3.6.1",
     "JSONStream": "^1.3.5",
+    "license-expressions": "^0.6.0",
     "moment": "^2.29.4",
     "packageurl-js": "^1.0.0",
     "pg-hstore": "^2.3.4",
@@ -99,8 +102,11 @@
     "react-pro-sidebar": "^0.7.1",
     "react-router-dom": "^6.4.1",
     "react-toastify": "^9.0.8",
+    "react-tooltip": "^5.10.4",
     "sequelize": "^6.23.2",
     "sequelize-cli": "^6.5.1",
+    "spdx-correct": "^3.1.1",
+    "spdx-license-ids": "^3.0.12",
     "sqlite3": "^5.1.2",
     "url": "^0.11.0",
     "url-loader": "^4.1.1",
@@ -135,9 +141,9 @@
         }
       ],
       "plugins": [
-        [
-          "@electron-forge/plugin-webpack",
-          {
+        {
+          "name": "@electron-forge/plugin-webpack",
+          "config": {
             "mainConfig": "./webpack.main.config.js",
             "renderer": {
               "config": "./webpack.renderer.config.js",
@@ -150,7 +156,7 @@
               ]
             }
           }
-        ]
+        }
       ]
     }
   }
