--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -36,6 +36,7 @@ jobs:
     needs: create_release
     name: Build Release archives
     strategy:
+      fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
     runs-on: ${{ matrix.os }}
