--- a/package.json
+++ b/package.json
@@ -106,7 +106,7 @@
     "sequelize-cli": "^6.5.1",
     "spdx-correct": "^3.1.1",
     "spdx-license-ids": "^3.0.12",
-    "sqlite3": "5.1.2",
+    "sqlite3": "^5.1.6",
     "url": "^0.11.0",
     "url-loader": "^4.1.1",
     "util": "^0.12.4"
