fixed incomplete license_detection file regions & duplicate matches, trimmed filter options, empty misc packages & detections
Signed-off-by: Omkar Phansopkar <omkarphansopkar@gmail.com>

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,20 +4,22 @@
     "es6": true,
     "node": true
   },
+  "plugins": ["css-import-order"],
   "extends": [
     "eslint:recommended",
     "plugin:@typescript-eslint/eslint-recommended",
     "plugin:@typescript-eslint/recommended",
     "plugin:import/recommended",
     "plugin:import/electron",
-    "plugin:import/typescript"
+    "plugin:import/typescript",
+    "plugin:css-import-order/recommended"
   ],
   "parser": "@typescript-eslint/parser",
   "settings": {
     "import/resolver": {
       "node": {
-        "extensions": [".js", ".jsx", ".ts", ".tsx"]
+        "extensions": [".js", ".jsx", ".ts", ".tsx", "json"]
       }
     }
-  },
+  }
 }
