--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@types/node": "^18.8.0",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
+    "@types/react-scroll": "^1.8.7",
     "@types/react-toastify": "^4.1.0",
     "@types/sequelize": "^4.28.14",
     "@types/sqlite3": "^3.1.8",
@@ -104,6 +105,7 @@
     "react-loader-spinner": "^5.3.4",
     "react-pro-sidebar": "^0.7.1",
     "react-router-dom": "^6.4.1",
+    "react-scroll": "^1.8.9",
     "react-toastify": "^9.0.8",
     "react-tooltip": "^5.10.4",
     "sequelize": "^6.23.2",
