--- a/package.json
+++ b/package.json
@@ -69,7 +69,8 @@
     "style-loader": "^3.3.1",
     "svg-url-loader": "^8.0.0",
     "ts-loader": "^9.4.1",
-    "typescript": "~4.8.4"
+    "typescript": "~4.8.4",
+    "worker-loader": "^3.0.8"
   },
   "dependencies": {
     "@electron/remote": "^2.0.8",
