--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "jsx": "react",
     "allowJs": true,
-    "module": "commonjs",
+    "module": "ES2020",
     "skipLibCheck": true,
     "esModuleInterop": true,
     "noImplicitAny": true,
