--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-chartjs-2": "^4.3.1",
+    "react-diff-viewer-continued": "^3.2.6",
     "react-dom": "^18.2.0",
     "react-loader-spinner": "^5.3.4",
     "react-pro-sidebar": "^0.7.1",
