Changed to punctuation & space insensitive diff implementation
Signed-off-by: Omkar Phansopkar <omkarphansopkar@gmail.com>

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@svgr/webpack": "^6.4.0",
     "@types/c3": "^0.7.8",
     "@types/d3": "^7.4.0",
+    "@types/diff": "^5.0.3",
     "@types/jquery": "^3.5.14",
     "@types/node": "^18.8.0",
     "@types/react": "^18.0.21",
@@ -85,6 +86,7 @@
     "aws-sdk": "^2.1358.0",
     "bootstrap": "^5.2.1",
     "c3": "^0.7.20",
+    "diff": "^5.1.0",
     "electron-squirrel-startup": "^1.0.0",
     "file-loader": "^6.2.0",
     "font-awesome": "^4.7.0",
