--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "aws-sdk": "^2.1358.0",
     "bootstrap": "^5.2.1",
     "c3": "^0.7.20",
+    "chart.js": "^4.3.0",
     "diff": "^5.1.0",
     "electron-squirrel-startup": "^1.0.0",
     "file-loader": "^6.2.0",
@@ -102,8 +103,7 @@
     "rc-tree": "^5.7.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
-    "react-chartjs-2": "^4.3.1",
-    "react-diff-viewer-continued": "^3.2.6",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-loader-spinner": "^5.3.4",
     "react-pro-sidebar": "^0.7.1",
@@ -113,8 +113,6 @@
     "react-tooltip": "^5.10.4",
     "sequelize": "^6.23.2",
     "sequelize-cli": "^6.5.1",
-    "spdx-correct": "^3.1.1",
-    "spdx-license-ids": "^3.0.12",
     "sqlite3": "^5.1.6",
     "url": "^0.11.0",
     "url-loader": "^4.1.1",
