Fixed incorrect diffs surrounding symbols and newlines
Signed-off-by: Omkar Phansopkar <omkarphansopkar@gmail.com>

--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "@svgr/webpack": "^6.4.0",
     "@types/c3": "^0.7.8",
     "@types/d3": "^7.4.0",
-    "@types/diff": "^5.0.3",
+    "@types/diff-match-patch": "^1.0.32",
     "@types/jquery": "^3.5.14",
     "@types/node": "^18.8.0",
     "@types/react": "^18.0.21",
@@ -87,7 +87,7 @@
     "bootstrap": "^5.2.1",
     "c3": "^0.7.20",
     "chart.js": "^4.3.0",
-    "diff": "^5.1.0",
+    "diff-match-patch": "^1.0.5",
     "electron-squirrel-startup": "^1.0.0",
     "file-loader": "^6.2.0",
     "font-awesome": "^4.7.0",
@@ -97,7 +97,6 @@
     "mock-aws-s3": "^4.0.2",
     "moment": "^2.29.4",
     "nock": "^13.3.0",
-    "packageurl-js": "^1.0.0",
     "pg": "^8.10.0",
     "pg-hstore": "^2.3.4",
     "rc-tree": "^5.7.0",
