--- a/package.json
+++ b/package.json
@@ -108,6 +108,7 @@
     "react-pro-sidebar": "^0.7.1",
     "react-router-dom": "^6.4.1",
     "react-scroll": "^1.8.9",
+    "react-select": "^5.7.3",
     "react-toastify": "^9.0.8",
     "react-tooltip": "^5.10.4",
     "sequelize": "^6.23.2",
