Setup basic unit tests for utilities
Signed-off-by: Omkar Phansopkar <omkarphansopkar@gmail.com>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,8 +15,6 @@
       "*": ["node_modules/*"]
     }
   },
-  "types": [
-    "node"
-  ],
-  "include": ["src/**/*"]
+  "types": ["node"],
+  "include": ["src/**/*"],
 }
