--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "publish": "electron-forge package && node packager.js && npm run create-archive",
     "create-archive": "python archive_builder.py",
     "lint": "eslint --ext .ts,.tsx .",
-    "test": "echo 'No tests yet :)'"
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "devDependencies": {
     "@electron-forge/cli": "^6.1.1",
@@ -39,8 +41,9 @@
     "@types/c3": "^0.7.8",
     "@types/d3": "^7.4.0",
     "@types/diff-match-patch": "^1.0.32",
+    "@types/jest": "^29.5.3",
     "@types/jquery": "^3.5.14",
-    "@types/node": "^18.8.0",
+    "@types/node": "^18.16.19",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "@types/react-scroll": "^1.8.7",
@@ -62,13 +65,16 @@
     "eslint-plugin-css-import-order": "^1.1.0",
     "eslint-plugin-import": "^2.26.0",
     "fork-ts-checker-webpack-plugin": "^7.2.13",
+    "jest": "^29.6.1",
     "json-loader": "^0.5.7",
     "native-ext-loader": "^2.3.0",
     "node-loader": "^2.0.0",
     "react-scripts": "^5.0.1",
     "style-loader": "^3.3.1",
     "svg-url-loader": "^8.0.0",
+    "ts-jest": "^29.1.1",
     "ts-loader": "^9.4.1",
+    "ts-node": "^10.9.1",
     "typescript": "~4.8.4"
   },
   "dependencies": {
