Added tests for packages & dependencies, Setup Tests CI
Signed-off-by: Omkar Phansopkar <omkarphansopkar@gmail.com>

--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -1,5 +1,5 @@
 # name of your github action
-name: Release
+name: Release CI
 
 # this will help you specify when & which branch to run deployment
 on:
