--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "eslint-plugin-import": "^2.26.0",
     "fork-ts-checker-webpack-plugin": "^7.2.13",
     "jest": "^29.6.1",
+    "jest-environment-jsdom": "^29.6.2",
     "json-loader": "^0.5.7",
     "native-ext-loader": "^2.3.0",
     "node-loader": "^2.0.0",
