--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,26 +1,27 @@
-alabaster==0.7.12
-Babel==2.9.1
-certifi==2019.11.28
-chardet==3.0.4
-colorama==0.4.3
-docutils==0.16
-idna==2.9
-imagesize==1.2.0
+alabaster
+Babel
+certifi
+chardet
+colorama
+docutils
+idna
+imagesize
 Jinja2==2.11.3
 MarkupSafe==1.1.1
-packaging==20.3
-Pygments==2.7.4
-pyparsing==2.4.6
-pytz==2019.3
-requests==2.23.0
-six==1.14.0
-snowballstemmer==2.0.0
+packaging
+Pygments
+pyparsing
+pytz
+requests
+six
+snowballstemmer
 Sphinx==2.4.4
-sphinx-rtd-theme==0.4.3
-sphinxcontrib-applehelp==1.0.2
-sphinxcontrib-devhelp==1.0.2
-sphinxcontrib-htmlhelp==1.0.3
-sphinxcontrib-jsmath==1.0.1
-sphinxcontrib-qthelp==1.0.3
-sphinxcontrib-serializinghtml==1.1.4
-urllib3==1.26.5
+sphinx-autobuild
+sphinx_rtd_theme
+sphinxcontrib-applehelp
+sphinxcontrib-devhelp
+sphinxcontrib-htmlhelp
+sphinxcontrib-jsmath
+sphinxcontrib-qthelp
+sphinxcontrib-serializinghtml
+urllib3
