--- a/package.json
+++ b/package.json
@@ -118,6 +118,7 @@
     "react-select": "^5.7.3",
     "react-toastify": "^9.0.8",
     "react-tooltip": "^5.10.4",
+    "scroll-into-view-if-needed": "^3.1.0",
     "sequelize": "^6.23.2",
     "sequelize-cli": "^6.5.1",
     "sqlite3": "^5.1.6",
