--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,7 +1,9 @@
 Sphinx>=5.0.2
-sphinx-rtd-theme>=1.0.0
-sphinx-reredirects >= 0.1.2
-doc8>=0.11.2
 sphinx-autobuild
+sphinx-reredirects>=0.1.2
+sphinx-rtd-theme>=1.0.0
+sphinx-rtd-dark-mode>=1.3.0
+doc8>=0.11.2
 jinja2
 markupSafe
+sphinx-copybutton
