--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -5,12 +5,6 @@
 # Required
 version: 2
 
-# Build in latest ubuntu/python
-build:
-  os: ubuntu-22.04
-  tools:
-    python: "3.11"
-
 # Build PDF & ePub
 formats:
   - epub
@@ -20,10 +14,13 @@ formats:
 sphinx:
    configuration: docs/source/conf.py
 
+# specify build OS
+build:
+  os: ubuntu-22.04
+  tools:
+    python: "3.11"
+
 # Setting the python version and doc build requirements
 python:
   install:
-    - method: pip
-      path: .
-      extra_requirements:
-        - docs
+  - requirements: docs/requirements.txt
