--- a/package.json
+++ b/package.json
@@ -37,9 +37,9 @@
     "@types/c3": "^0.7.10",
     "@types/d3": "^7.4.2",
     "@types/diff-match-patch": "^1.0.35",
-    "@types/jest": "^29.5.6",
-    "@types/node": "^20.8.9",
-    "@types/react": "^18.2.33",
+    "@types/jest": "^29.5.7",
+    "@types/node": "^20.8.10",
+    "@types/react": "^18.2.34",
     "@types/react-dom": "^18.2.14",
     "@types/react-scroll": "^1.8.9",
     "@types/sequelize": "^4.28.17",
@@ -48,9 +48,10 @@
     "@typescript-eslint/parser": "^6.9.1",
     "@vercel/webpack-asset-relocator-loader": "^1.7.3",
     "css-loader": "^6.8.1",
-    "electron": "^27.0.2",
+    "electron": "^27.0.3",
+    "electron-builder": "^24.6.4",
     "electron-packager": "^17.1.2",
-    "eslint": "^8.52.0",
+    "eslint": "^8.53.0",
     "eslint-plugin-css-import-order": "^1.1.0",
     "eslint-plugin-import": "^2.29.0",
     "fork-ts-checker-webpack-plugin": "^9.0.2",
@@ -71,10 +72,10 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mapbox/node-pre-gyp": "^1.0.11",
     "@microlink/react-json-view": "^1.23.0",
-    "ag-grid-community": "^30.2.0",
-    "ag-grid-react": "^30.2.0",
+    "ag-grid-community": "^30.2.1",
+    "ag-grid-react": "^30.2.1",
     "allotment": "^1.19.3",
-    "aws-sdk": "^2.1484.0",
+    "aws-sdk": "^2.1488.0",
     "bootstrap": "^5.3.2",
     "c3": "^0.7.20",
     "chart.js": "^4.4.0",
@@ -94,13 +95,13 @@
     "react-dom": "^18.2.0",
     "react-loader-spinner": "^5.4.5",
     "react-pro-sidebar": "0.7.1",
-    "react-router-dom": "^6.17.0",
+    "react-router-dom": "^6.18.0",
     "react-scroll": "^1.9.0",
     "react-select": "^5.7.7",
     "react-toastify": "^9.1.3",
-    "react-tooltip": "^5.21.6",
+    "react-tooltip": "^5.22.0",
     "scroll-into-view-if-needed": "^3.1.0",
-    "sequelize": "^6.33.0",
+    "sequelize": "^6.34.0",
     "sqlite3": "^5.1.6",
     "url-loader": "^4.1.1"
   },
