--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "scancode-workbench",
   "productName": "scancode-workbench",
-  "version": "4.0.0",
+  "version": "4.0.1",
   "description": "An application for viewing ScanCode results and concluding component origin and license",
   "repository": {
     "type": "git",
@@ -48,7 +48,7 @@
     "@typescript-eslint/parser": "^6.9.1",
     "@vercel/webpack-asset-relocator-loader": "^1.7.3",
     "css-loader": "^6.8.1",
-    "electron": "^27.0.3",
+    "electron": "^28.1.0",
     "electron-builder": "^24.6.4",
     "electron-packager": "^17.1.2",
     "eslint": "^8.53.0",
@@ -57,8 +57,8 @@
     "fork-ts-checker-webpack-plugin": "^9.0.2",
     "husky": "^8.0.3",
     "jest": "^29.7.0",
-    "node-loader": "^2.0.0",
     "jest-environment-jsdom": "^29.7.0",
+    "node-loader": "^2.0.0",
     "style-loader": "^3.3.3",
     "ts-jest": "^29.1.1",
     "ts-loader": "^9.5.0",
@@ -109,29 +109,6 @@
     "d3-color": "3.1.0"
   },
   "config": {
-    "forge": {
-      "packagerConfig": {
-        "name": "ScanCode Workbench",
-        "icon": "src/assets/app-icon/icon"
-      },
-      "plugins": [
-        {
-          "name": "@electron-forge/plugin-webpack",
-          "config": {
-            "mainConfig": "./webpack.main.config.js",
-            "renderer": {
-              "config": "./webpack.renderer.config.js",
-              "entryPoints": [
-                {
-                  "html": "./src/index.html",
-                  "js": "./src/renderer.ts",
-                  "name": "main_window"
-                }
-              ]
-            }
-          }
-        }
-      ]
-    }
+    "forge": "./forge.config.js"
   }
 }
