--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
   "scripts": {
     "start": "electron-forge start",
     "postinstall": "electron-builder install-app-deps",
-    "publish": "electron-forge package && node packager.js && npm run create-archive",
-    "create-archive": "python archive_builder.py",
+    "publish": "electron-forge package && node packager.js",
     "lint": "eslint --ext .ts,.tsx .",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -75,6 +74,7 @@
     "ag-grid-community": "^30.2.1",
     "ag-grid-react": "^30.2.1",
     "allotment": "^1.19.3",
+    "archiver": "^6.0.1",
     "aws-sdk": "^2.1488.0",
     "bootstrap": "^5.3.2",
     "c3": "^0.7.20",
