Fixed duplicate labels & added script to clean previous sphinx build cache
Signed-off-by: Omkar Phansopkar <omkarphansopkar@gmail.com>

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -20,6 +20,7 @@ docs:
 	@echo
 	@echo "Starting up the docs server..."
 	@echo
+	make clean
 	$(SPHINXAUTOBUILD) --port 8000 --watch ${SOURCEDIR} $(SOURCEDIR) "$(BUILDDIR)/html" $(SPHINXOPTS) $(O)
 
 # Catch-all target: route all unknown targets to Sphinx using the new
