--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -38,13 +38,13 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest, macos-latest, windows-latest, macos-14]
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@master
       - uses: actions/setup-python@v4
         with:
-          python-version: 3.9
+          python-version: 3.12.0
       - uses: actions/setup-node@master
         with:
           node-version: 16.13.0
