--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -12,7 +12,7 @@ jobs:
     name: Create Release
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@master
+      - uses: actions/checkout@v4
       # - name: Exit if tag not is not pointing to a commit in master branch
       #   if: endsWith(github.ref, 'master') == false
       #   run: exit -1
@@ -41,13 +41,13 @@ jobs:
         os: [ubuntu-latest, macos-latest, windows-latest, macos-14]
     runs-on: ${{ matrix.os }}
     steps:
-      - uses: actions/checkout@master
+      - uses: actions/checkout@v4
       - uses: actions/setup-python@v4
         with:
           python-version: 3.12.0
       - uses: actions/setup-node@master
         with:
-          node-version: 16.13.0
+          node-version: 20
       - name: Install dependencies
         run: npm install
       - name: Create release assets directory
