--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -11,15 +11,14 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [14.x, 16.x, 18.x]
+        node-version: [16.x, 18.x, 20.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@master
         with:
           node-version: ${{ matrix.node-version }}
-          cache: "npm"
       - run: npm install
       - run: npm test
